force-app/main/default/objects/Exception_Log__c/fields/Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Name__c</fullName>
    <label>Application Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unilever IPM NG</fullName>
                <default>true</default>
                <label>Unilever IPM NG</label>
            </value>
            <value>
                <fullName>Unilever Agencies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>