force-app/main/default/objects/Exception_Log__c/fields/IntegrationPayload__c.field-meta.xml
<CustomField>
    <fullName>IntegrationPayload__c</fullName>
    <description>If log is integration related show payload</description>
    <label>IntegrationPayload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>