force-app/main/default/objects/Exception_Log__c/fields/LogCode__c.field-meta.xml
<CustomField>
    <fullName>LogCode__c</fullName>
    <label>LogCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>