force-app/main/default/objects/Exception_Log__c/fields/Method_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Method_Parameters__c</fullName>
    <label>Method Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>