force-app/main/default/objects/Exception_Log__c/fields/ReferenceId__c.field-meta.xml
<CustomField>
    <fullName>ReferenceId__c</fullName>
    <description>The related record id</description>
    <label>ReferenceId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>