force-app/main/default/objects/Exception_Log__c/fields/ReferenceInfo__c.field-meta.xml
<CustomField>
    <fullName>ReferenceInfo__c</fullName>
    <description>The related record info</description>
    <label>ReferenceInfo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>