force-app/main/default/objects/Exception_Log__c/fields/Running_User__c.field-meta.xml
<CustomField>
    <fullName>Running_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Running User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IPM_Exception_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>