force-app/main/default/objects/Exception_Log__c/fields/StackTrace_Message__c.field-meta.xml
<CustomField>
    <fullName>StackTrace_Message__c</fullName>
    <label>StackTrace Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>