force-app/main/default/objects/Exception_Log__c/fields/Timer__c.field-meta.xml
<CustomField>
    <fullName>Timer__c</fullName>
    <label>Timer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>