force-app/main/default/objects/Exception_Log__c/listViews/All_Exceptions.listView-meta.xml
<ListView>
    <fullName>All_Exceptions</fullName>
    <columns>NAME</columns>
    <columns>Running_User__c</columns>
    <columns>Class_Name__c</columns>
    <columns>Method_Name__c</columns>
    <columns>Exception_Message__c</columns>
    <columns>Exception_Type__c</columns>
    <columns>StackTrace_Message__c</columns>
    <columns>LogCode__c</columns>
    <columns>DebugLevel__c</columns>
    <columns>IntegrationPayload__c</columns>
    <columns>ReferenceId__c</columns>
    <columns>ReferenceInfo__c</columns>
    <columns>Timer__c</columns>
    <columns>Application_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Exceptions</label>
</ListView>